<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaiDroidGdx</string>
    <string name="app_mainscreen_name">MaiDroid</string>
    <string name="tv_autoplay">自动播放</string>
    <string name="tv_play">开打！</string>
    <string name="tv_settings">设置</string>
    <string name="tv_links">链接</string>
    <string name="tv_edit">？？</string>
    <string name="tv_choosesong">选图</string>
    <string name="title_activity_choose_map">选图</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_links">链接</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string-array name="links_address">
        <item>http://pan.baidu.com/s/1nvbJhrF#list/path=%2F</item>
        <item>http://maimai.sega.jp/</item>
        <item>http://maimai.wiki.fc2.com/</item>
        <item>http://www12.atpages.jp/prevo0120/maipadmini/data/list.php</item>
        <item>http://www50.atwiki.jp/simai/</item>
    </string-array>

    <string name="about_audiofile">
        "关于音频\n\n"

        "对于APK包内自带歌曲，能找到的基本使用原曲，并用AU裁切成游戏版较短的版本。"
        "在此之后用GoldWave调整音频前边的空白，使音频在1s处对准maidata中的第一个note。"
        "音频开始的1s不一定留空，可以有声音（比如前奏啊人的吸气声啊），只要满足前一条就可以了。"
        "一般不对maidata进行操作，除非这个maidata前边空的实在太大。\n\n"

        "如果是音频以外的地方对准maidata的开始位置（不是第一个note），请编辑maidata。"
    </string>
    <!--Assets内歌曲名称列表-->
    <string name="songname_badapple">Bad Apple</string>
    <string name="songname_bbkk">B.B.K.K.B.K.K (Expert)</string>
    <string name="songanme_caliburne">Caliburne</string>
    <string name="songname_cycles">Cycles</string>
    <string name="songname_oboro">Oboro</string>
    <string name="songname_connect">Connect (Expert)</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_gamemechanism">游戏机制</string>

    <string name="pref_title_use_accurate_judgement">使用精确判定</string>
    <string name="pref_descr_use_accurate_judgement">每个电容区域当做圆形，而不是把整个电容区域当做网形
    </string>

    <string name="pref_title_show_debug">显示debug信息</string>
    <string name="pref_descr_show_debug">显示fps,总note数,绘制列表和判定区域等信息</string>

    <string name="pref_title_stardash03_optimize">星星判定优化*1</string>
    <string name="pref_descr_stardash03_optimize">所有间隔=2的直线型星星，从4个判定区优化为3个。比如从位置1到位置4的星星</string>

    <string name="pref_title_judge_timing_offset">判定时间延迟</string>
    <string name="pref_descr_judge_timing_offset">默认0.0，感觉自己打的早就往正数方向调，晚就往负数方向。单位：秒</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_sound">声音</string>

    <string name="pref_title_use_hitsound">播放打击的音效</string>
    <string name="pref_descr_use_hitsound">长按的音效也是这个</string>

    <string name="pref_title_use_starsound">播放星星的音效</string>

    <string name="pref_header_visual">显示</string>

    <string name="pref_title_disp_duration">note总显示时长</string>
    <string name="pref_descr_disp_duration">note从透明出现到移动到最外侧消失的总时长</string>

    <string name="pref_title_scaling_duration">note出现时长</string>
    <string name="pref_descr_scaling_duration">note从透明出现到开始移动的时长</string>

    <string name="pref_title_appear_position">note开始出现的位置</string>
    <string name="pref_descr_appear_position">范围0.0~1.0，0靠近中心，1靠近外圈</string>

    <string name="pref_title_viewport_scale">画面缩放比例</string>
    <string name="pref_descr_viewport_scale">标准是1.0，横竖屏自动适配。现在判定区也会跟着缩放</string>

    <string name="pref_title_note_timing_offset">note出现时间延迟</string>
    <string name="pref_descr_note_timing_offset">你可以通过自动播放时音效的位置确定，音效早的话往正数调。单位：秒</string>

    <string name="pref_title_disp_frame_eff">显示外圈光效</string>
    <string name="pref_descr_disp_frame_eff">在perfect时外圈模糊的白光特效</string>

    <string name="pref_title_eff_text_offset">判定文字位置缩进</string>
    <string name="pref_descr_eff_text_offset">范围0.0~1.0，打击特效文字对于中心位置的缩进，0靠近边缘，1靠近中心</string>

</resources>
