<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="0.0"
        android:key="judge_timing_offset"
        android:summary="@string/pref_descr_judge_timing_offset"
        android:title="@string/pref_title_judge_timing_offset" />

    <EditTextPreference
        android:defaultValue="0.0"
        android:key="note_timing_offset"
        android:summary="@string/pref_descr_note_timing_offset"
        android:title="@string/pref_title_note_timing_offset" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="use_accurate_judgement"
        android:summary="@string/pref_descr_use_accurate_judgement"
        android:title="@string/pref_title_use_accurate_judgement" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="optimize_star_dash03"
        android:summary="@string/pref_descr_stardash03_optimize"
        android:title="@string/pref_title_stardash03_optimize" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="debug_show"
        android:summary="@string/pref_descr_show_debug"
        android:title="@string/pref_title_show_debug" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
    <!--android:capitalize="words"-->
    <!--android:defaultValue="@string/pref_default_display_name"-->
    <!--android:inputType="textCapWords"-->
    <!--android:key="example_text"-->
    <!--android:maxLines="1"-->
    <!--android:selectAllOnFocus="true"-->
    <!--android:singleLine="true"-->
    <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:key="example_list"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
