<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="use_hitsound"
        android:summary="@string/pref_descr_use_hitsound"
        android:title="@string/pref_title_use_hitsound" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="use_starsound"
        android:title="@string/pref_title_use_starsound" />

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
    <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
    <!--android:defaultValue="180"-->
    <!--android:entries="@array/pref_sync_frequency_titles"-->
    <!--android:entryValues="@array/pref_sync_frequency_values"-->
    <!--android:key="sync_frequency"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_sync_frequency" />-->

    <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
    <!--design guidelines. &ndash;&gt;-->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
    <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

</PreferenceScreen>
