<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mainscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sth99.maidroidgdx.PageMain">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:columnCount="4"
            android:rowCount="2"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_column="0">

                <ImageButton
                    android:id="@+id/imageButtonChooseMap"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_folder_open_white_48dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textViewMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_choosesong"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_column="2">

                <ImageButton
                    android:id="@+id/imageButtonAutoPlay"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_play_circle_outline_white_48dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textViewMS1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_autoplay"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_column="1">

                <ImageButton
                    android:id="@+id/imageButtonPlay"
                    android:layout_width="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_play_arrow_white_48dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textViewMS2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_play"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_column="0">

                <ImageButton
                    android:id="@+id/ImageButtonSettings"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_settings_white_48dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textViewMS3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_settings"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_column="1">

                <ImageButton
                    android:id="@+id/ImageButtonLink"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_link_white_48dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textViewMS4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_links"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_column="2">

                <ImageButton
                    android:id="@+id/ImageButtonEdit"
                    android:scaleType="fitCenter"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/textViewMS5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    tools:text="@string/tv_edit" />

            </LinearLayout>

        </GridLayout>

    </HorizontalScrollView>
</RelativeLayout>
